<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.exaple.newsapp.ui.abp.HomeFragment"
        android:label="@string/abp"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.exaple.newsapp.ui.gallery.GalleryFragment"
        android:label="@string/aaj_tak"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.exaple.newsapp.ui.slideshow.SlideshowFragment"
        android:label="@string/republic_bharat"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/dainikbhaskarFragment"
        android:name="com.exaple.newsapp.Fragments.DainikBhaskarFragment"
        android:label="@string/dainik_bhaskar"
        tools:layout="@layout/fragment_dainik_bhaskar" />
    <fragment
        android:id="@+id/indiatvFragment"
        android:name="com.exaple.newsapp.Fragments.IndiaTvFragment"
        android:label="@string/india_tv"
        tools:layout="@layout/fragment_india_tv" />
</navigation>