<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/interview"
            android:title="@string/abp"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/journalism"
            android:title="@string/aaj_tak"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/newsreport"
            android:title="@string/republic_bharat"
            android:menuCategory="secondary"/>

        <item
            android:id="@+id/dainikbhaskarFragment"
            android:icon="@drawable/newsreporter"
            android:title="@string/dainik_bhaskar"
            android:menuCategory="secondary"/>

        <item
            android:id="@+id/indiatvFragment"
            android:icon="@drawable/newspaper"
            android:title="@string/india_tv"
            android:menuCategory="secondary"/>



    </group>
    <item android:title="Upcoming"
        android:menuCategory="secondary">

        <menu>
           <item
               android:id="@+id/ny"
               android:icon="@drawable/newslogo"
               android:title="New York Times"
               android:menuCategory="secondary"
               />


        </menu>

    </item>

</menu>